# OChat

./: CMakeLists.txt  datacache.cpp  datacache.h  main.cpp  res.qrc  vcpkg.json  window_manager.cpp  window_manager.h  windowmanager.cpp  windowmanager.h
backend/: backend.cpp  backend.h
backend/Room/: Basic.h  Uid.h  chat_entry.cpp  chat_entry.h  chatentry.cpp  chatentry.h  client_room.cpp  client_room.h  clientroom.cpp  clientroom.h  user.cpp  user.h
cache/: data_cache.cpp  data_cache.h  datacache.cpp  datacache.h
common/: debug.h
common/config/: client_setting.cpp  client_setting.h  clientsetting.cpp  clientsetting.h  config.cpp  config.h
common/log/: logger.cpp  logger.h
config/: clientconfig.cpp  clientconfig.h  clientsetting.cpp  clientsetting.h
data_structure/: datasructures.cpp  datasructures.h
log/: logger.cpp  logger.h
widget/: chat_widget.cpp  chat_widget.h  chatwidget.cpp  chatwidget.h  login_widget.cpp  login_widget.h  loginwidget.cpp  loginwidget.h  main_widget.cpp  main_widget.h  mainwidget.cpp  mainwidget.h  user_wrapper.cpp  user_wrapper.h  wrapper.h
widget/chat_widget/: chat_history_widget.cpp  chat_history_widget.h  chathistorywidget.cpp  chathistorywidget.h  input_widget.cpp  input_widget.h  inputwidget.cpp  inputwidget.h
widget/main_widget/: chatgroupboard.cpp  chatgroupboard.h  chatgrouplist.cpp  chatgrouplist.h  chatsessionlist.cpp  chatsessionlist.h  friend_list.cpp  friend_list.h  friendlist.cpp  friendlist.h  grouplist.cpp  grouplist.h  room_list.cpp  room_list.h  session_list.cpp  session_list.h  shown_board.cpp  shown_board.h  userboard.cpp  userboard.h  usergroupboard.cpp  usergroupboard.h
